--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   font-size: 14px;
-  
+
   font-family: Helvetica;
 }
 .banner {
@@ -30,6 +30,7 @@ h3 {
 .midline {
   color: white;
   background-image: url(../images/the-flatiron-building.png);
+  background-repeat: no-repeat;
 
 }
 footer {
